--- a/ddclient/templates/default/ddclient.conf.erb
+++ b/ddclient/templates/default/ddclient.conf.erb
@@ -5,7 +5,7 @@
 protocol=<%= node[:ddclient][:protocol] %>
 use=<%= node[:ddclient][:use] %>
 server=<%= node[:ddclient][:server] %>
-login=<%= node[:ddclient][:login] %>
-password='<%= node[:ddclient][:password] %>'
+login=<%= @ddclient_login %>
+password='<%= @ddclient_password %>'
 <%= node[:ddclient][:domain] %>
 
